add_library(simpledb_metadata
    table_manager.cpp
    view_manager.cpp
    stat_manager.cpp
    stat_info.cpp
    index_info.cpp
    index_manager.cpp
    metadata_manager.cpp
)

target_include_directories(simpledb_metadata
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
    PRIVATE
        ${CMAKE_SOURCE_DIR}/src
)

target_link_libraries(simpledb_metadata
    PUBLIC
        simpledb_record
        simpledb_tx
)

add_executable(table_manager_test
    table_manager_test.cpp
)
target_include_directories(table_manager_test
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/src
)
target_link_libraries(table_manager_test
    PRIVATE
        simpledb_metadata
        simpledb_server
)

add_executable(catalog_test
    catalog_test.cpp
)
target_include_directories(catalog_test
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/src
)
target_link_libraries(catalog_test
    PRIVATE
        simpledb_server
)

add_executable(metadata_manager_test
    metadata_manager_test.cpp
)
target_include_directories(metadata_manager_test
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/src
)
target_link_libraries(metadata_manager_test
    PRIVATE
        simpledb_server
)
