add_library(simpledb_parser
    lexer.cpp
    parser.cpp
    insert_data.cpp
    modify_data.cpp
    create_table_data.cpp
    delete_data.cpp
    create_index_data.cpp
    query_data.cpp
    create_view_data.cpp
)
target_include_directories(simpledb_parser
    PUBLIC
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/src/simpledb/parser
)
target_link_libraries(simpledb_parser
    PUBLIC
)

add_executable(parser_unit_tests
    lexer.t.cpp
)
target_include_directories(parser_unit_tests
    PUBLIC
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/src/simpledb/parser
)
target_link_libraries(parser_unit_tests
    PUBLIC
        simpledb_parser
        Catch2::Catch2WithMain
)

