add_library(simpledb_plan
    plan.cpp
    table_plan.cpp
    select_plan.cpp
    project_plan.cpp
    product_plan.cpp
    basic_query_planner.cpp
    better_query_planner.cpp
    query_planner.cpp
    update_planner.cpp
    basic_update_planner.cpp
    planner.cpp
)

target_include_directories(simpledb_plan
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
    PRIVATE
        ${CMAKE_SOURCE_DIR}/src
)

target_link_libraries(simpledb_plan
    PUBLIC
        simpledb_query
        simpledb_record
        simpledb_metadata
        simpledb_tx
        simpledb_parser
)

add_executable(planner_test
    planner_test.cpp
)
target_include_directories(planner_test
    PUBLIC
        ${CMAKE_SOURCE_DIR}/src
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
)
target_link_libraries(planner_test
    PUBLIC
        simpledb_server
)